// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button> that renders a button should add classes when props are changed 1`] = `
<Button
  context="primary"
  disabled={false}
  isBlock={true}
  isInline={false}
  isLoading={true}
  size="large"
  type="button"
>
  <button
    className="Button Button--context_primary Button--size_large Button--isBlock Button--isLoading"
    disabled={false}
    type="button"
  >
    <span>
      Click me
    </span>
  </button>
</Button>
`;

exports[`<Button> that renders a button should render an ancor element if href is defined 1`] = `
<Button
  context="neutral"
  disabled={false}
  href="/"
  isBlock={false}
  isInline={false}
  isLoading={false}
  size="normal"
  type="button"
>
  <a
    className="Button Button--context_neutral"
    href="/"
  >
    Click me
  </a>
</Button>
`;

exports[`<Button> that renders a button should render default button correctly 1`] = `
<Button
  context="neutral"
  disabled={false}
  isBlock={false}
  isInline={false}
  isLoading={false}
  size="normal"
  type="button"
>
  <button
    className="Button Button--context_neutral"
    disabled={false}
    type="button"
  >
    Click me
  </button>
</Button>
`;
